<resources>
    <string name="app_name">FinalProskillsProject</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign In to Continue</string>
    <string name="password">Password</string>
    <string name="approval">I hereby that I read and accept conditions</string>
    <string name="next">Next</string>
    <string name="rus">Rus</string>
    <string name="eng">Eng</string>
    <string name="sign_up">Sign up to continue</string>
    <string name="balance">Balance</string>
    <string name="cards">Attached cards</string>
    <string name="history">History</string>
    <string name="transaction">Transaction from</string>
    <string name="date" translatable="false">01 august 2022, 14:10</string>
    <string name="fullName">Ozar Aini</string>
    <string name="personal_info">Personal Info</string>
    <string name="qr_text">QR Code</string>
    <string name="settings_language" translatable="false">Language</string>
    <string name="version">Version</string>
    <string name="transaction_history">Transaction History</string>
    <string name="change_profile">Change Profile Information</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phoneNumber">Phone Number (+992)</string>
    <string name="dateOfBirth" >Date of Birth</string>
    <string name="change_birth">Change Birth Date</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="register">Register</string>
    <string name="amount_entry">Amount</string>
    <string name="transaction_text" >Transaction</string>
    <string name="send_to">Send to</string>
    <string name="send">Send</string>
    <string name="number">+992</string>
    <string name="To_wallet">To wallet</string>
    <string name="addcard">Add Card</string>
    <string name="card_type">Please choose card type</string>
    <string name="bank_name">Bank Name</string>
    <string name="card_name_text">Full Name on Card</string>
    <string name="email">Email</string>
    <string name="card_number">Card Number</string>
    <string name="valid">Valid to</string>
    <string name="card_replenish">Replenish balance by card</string>
    <string name="Cashbacks">Cashbacks</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="login_registration">login</string>
    <string name="succesful_tranfer">Your money are successfully transferred!</string>
    <string name="change_language">Change Language</string>
    <string name="receiverTransaction">Receiver: </string>
    <string name="payment_method">Payment method:</string>
    <string name="transactionID">Transaction ID:</string>
    <string name="help">Help</string>
    <string name="succesful_registration">Successfully registered</string>


    <string-array name="CardType">
        <item>National</item>
        <item>Visa</item>
        <item>Master</item>
    </string-array>

</resources>