<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FragmentRegistration">
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/wave"
        android:background="@drawable/wave"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="70dp"
        android:layout_marginStart="20dp"
        android:textSize="36sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/text_signup"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/wave"
        android:layout_marginTop="32dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registration_name_entry"
                android:hint="@string/name"
                android:background="@drawable/round_shape"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:background="@drawable/round_shape"
                android:id="@+id/registration_surname_entry"
                app:layout_constraintTop_toBottomOf="@+id/registration_name_entry"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registration_password"
                android:hint="@string/password"
                android:background="@drawable/round_shape"
                app:layout_constraintTop_toBottomOf="@+id/registration_surname_entry"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registration_phone_entry"
                android:hint="@string/phoneNumber"
                android:background="@drawable/round_shape"
                app:layout_constraintTop_toBottomOf="@+id/registration_password"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateOfBirth"
                android:id="@+id/date_picker"
                app:layout_constraintTop_toBottomOf="@+id/registration_phone_entry"

                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/date_picker"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/registration_checkbox"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/date_picker"
                app:layout_constraintStart_toEndOf="@id/registration_checkbox"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:maxLines="3"
                android:id="@+id/registration_terms"
                android:text="@string/approval"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/registration_next"
                app:layout_constraintTop_toBottomOf="@id/registration_terms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rus"
                android:layout_marginTop="16dp"
                android:id="@+id/russian"
                app:layout_constraintTop_toBottomOf="@+id/registration_next"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eng"
                android:id="@+id/english"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/registration_next"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>