<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentLogin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/login_editText"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableStart="@drawable/ic_person"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/round_shape"
        android:hint="@string/login"
        android:layout_marginHorizontal="8dp"
        android:id="@+id/login_editText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/login_editText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="8dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:background="@drawable/round_shape"
        android:drawableStart="@drawable/ic_lock"
        app:layout_constraintTop_toBottomOf="@+id/login_editText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:text="@string/forgot_password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>