<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentAddCard">
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/wave"
        android:background="@drawable/wave"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_back_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/wave"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/card_type_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:text="@string/card_type"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_type_text"
        android:layout_marginTop="16dp"
        android:id="@+id/cardType_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_name_text"
        android:id="@+id/card_name_entry"
        app:layout_constraintTop_toBottomOf="@id/cardType_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_shape"
        android:textSize="22sp"
        android:paddingStart="8dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_name_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_shape"
        android:textSize="22sp"
        android:paddingStart="8dp"
        android:hint="@string/phoneNumber"
        android:id="@+id/card_phone_entry"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_phone_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_shape"
        android:textSize="22sp"
        android:paddingStart="8dp"
        android:id="@+id/card_email_entry"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_email_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_shape"
        android:textSize="22sp"
        android:paddingStart="8dp"
        android:id="@+id/card_number_entry"
        android:hint="@string/card_number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_number_entry"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_shape"
        android:textSize="22sp"
        android:paddingEnd="16dp"
        android:paddingStart="8dp"
        android:id="@+id/card_expire_entry"
        android:hint="@string/valid"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valid_button"
        app:layout_constraintTop_toBottomOf="@id/card_number_entry"
        app:layout_constraintStart_toEndOf="@id/card_expire_entry"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="Choose"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/valid_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Submit"
        android:id="@+id/submit"
        android:layout_marginTop="24dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>