<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ChangeProfileFragment">
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/wave"
        android:background="@drawable/wave"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_back_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/wave"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/text_profile"
        android:layout_marginStart="16dp"
        android:text="@string/change_profile"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_profile"
        android:id="@+id/person_icon"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic__person_profile"
        android:background="?attr/selectableItemBackground"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_profile"
        app:layout_constraintStart_toEndOf="@id/person_icon"
        tools:text="(+992) 935012824"
        android:id="@+id/phone"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/change_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change_name"
        android:background="@drawable/round_shape"
        android:textSize="22sp"
        android:paddingStart="8dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_icon"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/birth_fixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="none"
        android:visibility="gone"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_name"
        tools:text="28.09.1998"
        tools:visibility="visible" />

    <Button
        android:id="@+id/change_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/change_birth"
        app:layout_constraintStart_toEndOf="@id/birth_fixed"
        app:layout_constraintTop_toBottomOf="@+id/change_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes"
        android:id="@+id/apply_changes"
        app:layout_constraintTop_toBottomOf="@id/change_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>