<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentBalanceIncrease">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/wave"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_back_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/wave"
        android:text="@string/card_replenish"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:id="@+id/balance_text"
        android:layout_marginStart="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/balance_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_shape"
        android:textSize="20sp"
        android:paddingVertical="4dp"
        android:paddingStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/amount_entry"
        android:id="@+id/amount_replenish_entry"
        android:textColor="@color/black"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/amount_replenish_entry"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/round_shape"
        android:textSize="20sp"
        android:paddingVertical="4dp"
        android:hint="@string/card_number"
        android:textColor="@color/black"
        android:id="@+id/card_number_replenish_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="8dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_number_replenish_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/submit"
        android:text="submit"/>





</androidx.constraintlayout.widget.ConstraintLayout>